# BSU_OS_Labs

./: CMakeLists.txt  README.md  Sender.cpp
lab1/: CMakeLists.txt  creator.cpp  main  main.cpp  reporter.cpp  tests.cpp
lab3/: CMakeLists.txt
lab3/src/: CMakeLists.txt  main.cpp  marker_thread.cpp  marker_thread.h
lab3/tests/: CMakeLists.txt  test_marker.cpp
src/: array_utils.cpp  array_utils.h  main.cpp
tests/: CMakeLists.txt  test_array_utils.cpp
